﻿Version 2.8.0
MVC 6
- Upgraded to ASP.NET 5 RC1.
- NuGet packages split into three, Boilerplate.Web.Mvc6, Boilerplate.Web.Mvc6.TagHelpers, Boilerplate.Web.Mvc6.Razor.
- _ViewImports.cshtml updated to pick up the Tag Helpers from the new location.
- Boilerplate.Web.Mvc6.dll is now signed.
- NPM and Gulp packages updated in package.json.
- Logging configuration added to config.json and Startup.Logging.cs.
- Added "use strict"; in gulpfile.js.
- Added main method to Startup.cs with a setting in project.json to use it.
- Removed Bootstrap Touch Carousel from _Layout.cshtml, Index.cshtml, fallback\scripts.js, gulpfile.js, ContentDeliveryNetwork.cs, bower.json. 
- Updated Readme.html with links to RC1 instead of Beta 8.
- NuGet assemblies are now strong named like the Microsoft ones.
- gulpfile.js JSLint Fixes

Version 2.7.0
MVC 5
- Added a note to ReadMe.html to enable the CSP upgrade-insecure-requests directive in Startup.cs.
MVC 6
- Added Application Insights Feature.
- SitemapService and SitemapPingerService track custom Application Insights events.
- SitemapPingerService now stores it's pinging locations in config.json using the SitemapSettings.
- SitemapPingerService now uses the hosting environment and only works in the production environment.

Version 2.6.0
MVC 5
- Added a commented out line for adding the Content-Security-Policy:upgrade-insecure-requests directive in Startup.cs.
- CSP Policy changed to add wss://localhost:* to the allowed connect-src list in debug mode to fix browser link.
MVC 6
- NPM packages updated to latest versions.
- JS-Hint feature added, making JS-Hint optional.
- NuGet package updated to add IDistributedCache extension methods.
- SitemapService changed to use the IDistributedCache instead of IMemoryCache.
- Added the RouteConvention to the NuGet package to enable global route prefixes. See http://www.strathweb.com/2015/10/global-route-prefixes-with-attribute-routing-in-asp-net-5-and-mvc-6/.

Version 2.5.0
MVC 5