@@ -1,11 +1,34 @@
 ﻿namespace MvcBoilerplate
-{
+{    
+    // $Start-Glimpse$
+    using Glimpse;
+    // $End-Glimpse$
     using Microsoft.AspNet.Builder;
     using Microsoft.AspNet.Diagnostics;
     using Microsoft.AspNet.Hosting;
 
     public partial class Startup
     {
+        // $Start-Glimpse$
+        /// <summary>
+        /// Configure tools used to help with debugging the application.
+        /// </summary>
+        /// <param name="services">The services collection or IoC container.</param>
+        /// <param name="environment">The environment the application is running under. This can be Development, 
+        /// Staging or Production by default.</param>
+        private static void ConfigureDebuggingServices(
+            IServiceCollection services,
+            IHostingEnvironment environment)
+        {
+            // Add the following services only in development environment.
+            if (environment.IsDevelopment())
+            {
+                // Add Glimpse to help with debugging (See http://getglimpse.com/).
+                services.AddGlimpse();
+            }
+        }
+
+        // $End-Glimpse$
         /// <summary>
         /// Configure tools used to help with debugging the application.
         /// </summary>
@@ -26,6 +49,11 @@
                 // Allow updates to your files in Visual Studio to be shown in the browser. You can use the Refresh 
                 // browser link button in the Visual Studio toolbar or Ctrl+Alt+Enter to refresh the browser.
                 application.UseBrowserLink();
+                // $Start-Glimpse$
+
+                // Add Glimpse to help with debugging (See http://getglimpse.com/).
+                application.UseGlimpse();
+                // $End-Glimpse$
             }
         }
     }
