@@ -9,6 +9,9 @@
     // $Start-CshtmlMinification$
     "Boilerplate.Web.Mvc6.Razor": "2.0.0-rc1-final-3",
     // $End-CshtmlMinification$
+    // $Start-Glimpse$
+    "Glimpse": "2.0.0-beta1",
+    // $End-Glimpse$
     // $Start-ApplicationInsights$
     "Microsoft.ApplicationInsights.AspNet": "1.0.0-rc1",
     // $End-ApplicationInsights$
@@ -55,6 +58,9 @@
     },
     "dnxcore50": {
       "dependencies": {
+        // $Start-Glimpse$
+        "System.IO.Compression": "4.1.0-beta-23516",
+        // $End-Glimpse$
         "System.Net.Http": "4.0.1-beta-23516"
       }
     }
